<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B82323"
    tools:context=".Login"
   >


    <TextView
        android:id="@+id/text_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Blue"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        android:textSize="40sp"
        android:textStyle="bold"
        android:translationX="70dp"
        android:translationY="150dp" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/if_login"
        android:textAlignment="center"
        android:textColor="#A3A5A6"
        android:textSize="20sp"
        android:translationX="45dp"
        android:translationY="200dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autofillHints="username"
        android:backgroundTint="@color/Blue"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="300dp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:backgroundTint="@color/Blue"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="#DF3D4245"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="380dp" />

    <Button
        android:id="@+id/eye_private"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/LOGIN"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="30dp"
        android:translationY="500dp" />

    <TextView
        android:id="@+id/question_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q_do_not_have_account"
        android:textSize="17sp"
        android:translationX="60dp"
        android:translationY="570dp" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openRegistration"
        android:text="@string/signup"
        android:textColor="#2196F3"
        android:textStyle="bold"
        android:translationX="290dp"
        android:translationY="570dp" />

    <Button
        android:id="@+id/button_private"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white_eye"
        android:text="@string/Button"
        android:translationX="320dp"
        android:translationY="380dp"
        app:icon="@drawable/visibility"
        app:iconSize="30dp"
        app:iconTint="@color/bark_Black"/>
</RelativeLayout>