<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">


    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Blue"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        android:textSize="40sp"
        android:textStyle="bold"
        android:translationX="20dp"
        android:translationY="100dp" />

    <TextView
        android:id="@+id/Q_do_not_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/if_do_not_have_account"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="20sp"
        android:translationX="2dp"
        android:translationY="105dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/Blue"
        android:clickable="false"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/name"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="150dp"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/E_mail"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/Blue"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/E_Mail"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="160dp"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/Blue"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_gray"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="170dp"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/visibility_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@color/white_eye"
        android:text="@string/Button"
        android:translationX="330dp"
        android:translationY="120dp"
        app:icon="@drawable/visibility"
        app:iconSize="30dp"
        app:iconTint="@color/bark_Black" />

    <EditText
        android:id="@+id/re_password"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:backgroundTint="@color/Blue"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/Re_Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColorHighlight="@color/Blue"
        android:textColorLink="@color/blue2_bark"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="15dp"
        android:translationY="130dp" />

    <Button
        android:id="@+id/login"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/Blue"
        android:onClick="openCompleteInformation"
        android:text="@string/createButton"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="30dp"
        android:translationY="180dp" />

    <TextView
        android:id="@+id/Q_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Q_have_account"
        android:textSize="17sp"
        android:translationX="80dp"
        android:translationY="210dp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="openLogin"
        android:text="@string/Login"
        android:textColor="@color/blue2_light"
        android:textSize="17sp"
        android:textStyle="bold"
        android:translationX="260dp"
        android:translationY="186dp" />


</LinearLayout>