<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompleteInformation"
    android:orientation="vertical">


    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Blue"
        android:paddingTop="10dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/text_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_complete"
        android:textAlignment="center"
        android:textColor="@color/Blue"
        android:textSize="40sp"
        android:textStyle="bold"
        android:translationX="0dp"
        android:translationY="80dp" />
    <TextView
        android:id="@+id/Gender"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/Gender"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:translationX="40dp"
        android:translationY="120dp" />
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:translationX="180dp"
        android:translationY="80dp" >

        <RadioButton
            android:id="@+id/male"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:buttonTint="@color/Blue"
            android:checked="true"
            android:text="@string/Male"
            android:textColor="@color/Blue"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/Blue"
            android:checked="false"
            android:text="@string/Female"
            android:textColor="#0277BD"
            android:textSize="15sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/Weight"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/Weight"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:translationX="40dp"
        android:translationY="100dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:translationX="180dp"
        android:translationY="80dp"
        android:background="@drawable/shape">

        <ImageView
            android:id="@+id/minus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/minus"
            android:contentDescription="@string/minus"/>

        <TextView
            android:id="@+id/edit_weight"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:text=""
            android:background="@drawable/shape"/>

        <ImageView
            android:id="@+id/plus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/plus"
            android:contentDescription="@string/plus"/>


    </LinearLayout>
    <TextView
        android:id="@+id/kg"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="@string/Kg"
        android:textColor="@color/Blue"
        android:textStyle="normal|bold"
        android:translationX="340dp"
        android:translationY="60dp" />
    <TextView
        android:id="@+id/length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Length"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:translationX="40dp"
        android:translationY="80dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:translationX="180dp"
        android:translationY="60dp"
        android:background="@drawable/shape">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/minus"
            android:contentDescription="@string/minus"
            />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:autofillHints="creditCardNumber"
            android:background="@drawable/shape"
            android:inputType="number"
            android:text=""
            />

        <ImageView
            android:id="@+id/imageButton1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/plus"
            android:contentDescription="@string/plus"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:text="@string/cm"
        android:textColor="@color/Blue"
        android:textStyle="normal|bold"
        android:translationX="340dp"
        android:translationY="40dp" />
    <TextView
        android:id="@+id/text_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateBirth"
        android:textColor="@color/Blue"
        android:textSize="20sp"
        android:translationX="40dp"
        android:translationY="60dp" />

    <EditText
        android:id="@+id/edit_dataBirth"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:autofillHints="creditCardExpirationDate"
        android:inputType="number"
        android:text=""
        android:translationX="180dp"
        android:translationY="40dp"
        android:background="@drawable/shape"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    <Button
        android:id="@+id/save"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/Save"
        android:textSize="20sp"
        android:textStyle="bold"
        android:translationX="35dp"
        android:translationY="120dp" />

</LinearLayout>
